2005-06-01  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-shapes.c: fixed problems with polylines by using the generic list parser

2005-05-30  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-shapes.c: converted all shapes to be manipulatable
	* rsvg-filter.c: made transfer functions more similar to everything else
	
2005-05-20  Caleb Moore <c.moore@student.unsw.edu.au>
	
	* rsvg-paint-server.c, rsvg-art-paint-server.c, rsvg.c: converted to use the new create->manipulate->use system.

2005-05-17  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-structure.c: Fixed a problem with <use> not working.

2005-05-17  Caleb Moore <c.moore@student.unsw.edu.au>

	* A_whole_bunch_o'_files: Did a bit of fiddling. Now Children are stored in the RsvgNode structure, since DOM seems to mandate that everything be able to have children. I shall get rid of virtual functions for adding children soon.
	* rsvg-filters.c: Made merge nodes and light sources proper objects.
	* rsvg-marker.c: Converted markers to use the new system and broke them BADLY.
	* rsvg-structures.c: made structual element relating functions a bit more generic. Saves some code duplication.
	
2005-05-16  Caleb Moore <c.moore@student.unsw.edu.au>

	* rsvg-filter.c, rsvg-structure.c, rsvg-mask.c, rsvg.c: more DOM stuff. Now orthodox nodes are created, then attributes are assigned then are packed onto the top of the tree. I have moved all conforming node creation bits to rsvg-filter-handler-start so I remember what's left to convert. Probably opened a few bugs, you know how it is. Theoretically, it is now possible to implement external DOM interfaces to create new nodes and add nodes to other nodes. Attributes can be edited as much as the user wants for many elements now.
	
2005-05-14  Dom Lachowicz <cinamod@hotmail.com>

	* rsvg-filter.c: Bug 302905
	* rsvg-text.c: Bug 170164
	* rsvg-image.c: Bug 304045
	
2005-05-15  Caleb Moore <c.moore@student.unsw.edu.au>
